--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <i class="fa-solid fa-house"></i>
+    <h1>Hello world</h1>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
